fixeed overflow and added light and dark mode

--- a/css/nav.css
+++ b/css/nav.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow-x: hidden; 
 }
 
 .container {
@@ -109,4 +110,66 @@ footer {
     .footer {
         padding: 10px 0;
     }
+}
+
+.mode-switch {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+}
+
+.mode-switch label {
+    margin-right: 10px;
+}
+
+
+.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+
+.light-mode {
+    background-color: #fff;
+    color: #333;
+}
+
+
+
+
+.mode-switch {
+    background-color: #0467DB; 
+    color: #fff; 
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.mode-switch:hover {
+    background-color: #023B60; 
+    color: #fff; 
+}
+
+
+.dark-mode .button {
+    background-color: #023B60; 
+}
+
+.dark-mode .button:hover {
+    background-color: #0467DB; 
+}
+
+.light-mode .button {
+    background-color: #0467DB; 
+}
+
+.light-mode .button:hover {
+    background-color: #023B60; 
 }
